# prometheus-mcp-server

./: .env.example  .gitignore  INSPECTOR_QUICK_START.md  LEARNING_PATH.md  README.md  SETUP_INSPECTOR.md  mcp_server_wrapper.sh  pyproject.toml  run_inspector.sh
docs/: ARCHITECTURE.md  GETTING_STARTED_TUTORIAL.md  PROMPTS_AND_RESOURCES_GUIDE.md  QUICK_REFERENCE.md  SETUP_INSPECTOR.md  vscode-integration.md
examples/: README.md  demo_prompts_resources.py
src/prometheus_mcp_server/: __init__.py  simple_server.py
